--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>サイトのタイトル</title>
+<title>Simple Web Site</title>
 <link rel="stylesheet" type="text/css" href="css/html5reset.css"  />
 <!--&#91;if lt IE 9&#93;>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
